--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -6,56 +6,91 @@
     android:layout_height="match_parent"
     tools:context=".AddFragment">
 
-    <EditText
-        android:id="@+id/et_name"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
-        android:hint="@string/name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
-        android:id="@+id/et_ingredients"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:hint="@string/ingredients"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_name" />
-
-    <EditText
-        android:id="@+id/et_text"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:hint="@string/description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_ingredients" />
-
-    <EditText
-        android:id="@+id/et_URL"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:hint="@string/url_photo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_text" />
-
-    <Button
-        android:id="@+id/btn_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add"
-        android:textSize="25sp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_URL"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintEnd_toEndOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:id="@+id/et_name"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:minHeight="52dp"
+                android:layout_marginTop="84dp"
+                android:background="@drawable/bg_edit_text"
+                android:paddingStart="20dp"
+                android:hint="@string/name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/et_ingredients"/>
+
+            <EditText
+                android:id="@+id/et_ingredients"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:minHeight="52dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/bg_edit_text"
+                android:paddingStart="20dp"
+                android:hint="@string/ingredients"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_name"
+                app:layout_constraintBottom_toTopOf="@id/et_text"/>
+
+            <EditText
+                android:id="@+id/et_text"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:minHeight="52dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/bg_edit_text"
+                android:paddingStart="20dp"
+                android:hint="@string/description"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_ingredients"
+                app:layout_constraintBottom_toTopOf="@id/et_url"/>
+
+            <EditText
+                android:id="@+id/et_url"
+                android:layout_width="300dp"
+                android:layout_height="wrap_content"
+                android:minHeight="52dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/bg_edit_text"
+                android:paddingStart="20dp"
+                android:hint="@string/url_photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_text"
+                app:layout_constraintBottom_toTopOf="@id/btn_add"/>
+
+            <Button
+                android:id="@+id/btn_add"
+                android:layout_width="184dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="56dp"
+                android:layout_marginBottom="56dp"
+                android:text="@string/add"
+                android:textSize="20sp"
+                app:icon="@drawable/baseline_add_24"
+                app:iconPadding="0dp"
+                app:iconSize="24dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/et_url"
+                app:layout_constraintVertical_bias="0.3" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
