--- a/app/src/main/res/layout/fragment_choose.xml
+++ b/app/src/main/res/layout/fragment_choose.xml
@@ -18,38 +18,40 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="356dp"
-        android:layout_height="596dp"
+        android:layout_height="424dp"
         android:background="@drawable/bg_rounded_shape"
-        android:orientation="vertical"
         android:elevation="8dp"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498">
 
         <Button
             android:id="@+id/btn_sign_in"
             android:layout_width="220dp"
             android:layout_height="64dp"
-            android:layout_marginBottom="84dp"
+            android:layout_marginBottom="24dp"
             android:text="@string/sign_in"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_sign_up"  />
+            app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />
 
         <Button
             android:id="@+id/btn_sign_up"
             android:layout_width="220dp"
             android:layout_height="64dp"
-            android:layout_marginTop="72dp"
+            android:layout_marginTop="12dp"
             android:text="@string/sign_up"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"  />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
