--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -8,16 +8,22 @@
         android:title="@string/search" />
 
     <item
+        android:id="@+id/favoriteFragment"
+        android:checked="true"
+        android:icon="@drawable/baseline_favorite_24"
+        android:title="@string/favorite" />
+
+    <item
         android:id="@+id/addFragment"
         android:checked="true"
         android:icon="@drawable/baseline_add_24"
         android:title="@string/add" />
 
-    <item
-        android:id="@+id/favoriteFragment"
-        android:checked="true"
-        android:icon="@drawable/baseline_favorite_24"
-        android:title="@string/favorite" />
+<!--    <item-->
+<!--        android:id="@+id/favoriteFragment"-->
+<!--        android:checked="true"-->
+<!--        android:icon="@drawable/baseline_favorite_24"-->
+<!--        android:title="@string/favorite" />-->
 
     <item
         android:id="@+id/userAccountFragment"
